apps/dev/payment-app/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-app
  namespace: payment-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-app
  template:
    metadata:
      labels:
        app: payment-app
    spec:
      containers:
      - name: payment-app
        image: nanajanashia/k8s-demo-app:v1.0
        ports:
        - containerPort: 3000
