apps/dev/payment-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service          # This name is fine (logical name)
  namespace: finapp
  labels:
    app: mongo                   # match deployment's label
    environment: dev
    managed-by: argocd
spec:
  selector:
    app: mongo                   # must match the deployment!
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP                # keep it internal (default)
