apps/dev/payment-app/web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-app
  labels:
    app: payment-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-app
  template:
    metadata:
      labels:
        app: payment-app
    spec:
      containers:
      - name: payment-app
        image: nanajanashia/k8s-demo-app:v1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: payment-app-service
spec:
  type: NodePort
  selector:
    app: payment-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30100
