apps/dev/payment-app/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-web
  namespace: payment-app
spec:
  selector:
    app: payment-web
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
